--- a/style.css
+++ b/style.css
@@ -9,10 +9,13 @@ body{
     color:#fff;
     
 }
+html{
+    scroll-behavior: smooth;
+}
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url('images/background.png');
+    background-image: url('images/bg4.jpg');
     background-size:cover;
     background-position:center;
     background-repeat: no-repeat;
@@ -92,6 +95,8 @@ nav ul li a:hover::after{
 }
 .about-col-1 img{
     width:100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 15px ;
 }
 .about-col-2{
@@ -195,6 +200,7 @@ nav ul li a:hover::after{
         grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
         grid-gap:40px;
         margin-top: 50px;
+        height: 80%;
     }
     .work{
         position: relative;
@@ -204,6 +210,7 @@ nav ul li a:hover::after{
     }
     .work img{
         width: 100%;
+        height: 100%;
         border-radius: 10px;
         display: block;
         transition:transform 0.5s;
@@ -332,8 +339,73 @@ form .btn2{
     color:#000;
 }
 /* ---------------css for small screen ---------- */
+nav .fa-solid{
+    display: none;
+}
+@media only screen and (max-width:600px){
+    #header{
+       
+    background-image: url('images/background.png');
+    }
+    .header-text{
+        margin-top:100%;
+        font-size:16px;
+    }
+    .header-text h1{
+        margin-top: 10%;
+        font-size:30px;
+    }
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background: #ff004f;
+        position:fixed;
+        top:0;
+        right:-200px;
+        width:200px;
+        height:100vh;
+        padding-top:50px;
+        z-index:2;
+        transition:right 0.5s;   
 
+    }
+    nav ul li{
+        display:block;
+        margin:25px;
+        
+    }
+    nav ul .fa-solid{
+        position:absolute;
+        top:25px;
+        left:25px;
+        cursor:pointer
+    }
+    .sub-title{
+        font-size:40px;
+    }
+    .about-col-1,.about-col-2{
+        flex-basis:100%
+    }
+    .about-col-1{
+        margin-bottom:30px;
+    }
+    .about-col-2{
+        font-size:14px;
+    }
+    .tab-links{
+        font-size:16px;
+        margin-right:20px;
+    }
+    .contact-left,.contact-right{
+        flex-basis:100%;
 
+    }
+    .copyright{
+        font-size: 14px;
+    }
+}
 
 
 
