--- a/style.css
+++ b/style.css
@@ -30,14 +30,16 @@ nav{
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.logo{
-    margin-left: 20px;
-    font-weight: 900;
-
-    width: 200px;
-    color: rgb(253, 248, 248);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-shadow: 5px 5px rgb(15, 16, 12);
+nav .logo{
+        border-radius: 50%;
+        width: 50px;
+        height: 40px;
+        line-height: 40px;
+        background: #1b83a3;
+        color:rgb(245, 237, 237);
+        text-align: center;
+        box-shadow:0px 5px 10px rgb(27, 24, 24);
+        text-shadow: #1b83a3;
 }
 nav ul li{
     list-style: none;
@@ -77,7 +79,7 @@ nav ul li a:hover::after{
 }
 .header-text h1 span{
 
-    color:rgb(34, 217, 223)
+    color:rgb(8, 242, 250)
 }
 
 /* ------------CSS ABOUT------------- */
@@ -102,11 +104,20 @@ nav ul li a:hover::after{
 .about-col-2{
     flex-basis:60%;
 }
+.about-col-2 p{
+    text-align:justify;
+    text-align-last:left;
+    word-spacing: normal;
+    line-height: 1.0;
+    hyphens: auto;
+}
 .sub-title{
     font-weight: 600;
     font-size: 60px;
     color:#fff;
+    
 }
+
 .tab-title{
     display: flex;
     margin:20px 0px 40px;
@@ -162,6 +173,7 @@ nav ul li a:hover::after{
     }
     
     .services-list  div{
+       
         background: #262626;
         padding:40px;
         font-size: 13px;
@@ -172,6 +184,16 @@ nav ul li a:hover::after{
         .services-list  div i {
         font-size: 50px;
         margin-bottom: 30px;
+       
+
+       }
+       .services-list  div p{
+        text-align:justify;
+        text-align-last:left;
+        word-spacing: normal;
+        line-height: 1.5;
+        hyphens: auto;
+
 
        }
        .services-list  div h2{
@@ -344,11 +366,14 @@ nav .fa-solid{
 }
 @media only screen and (max-width:600px){
     #header{
+      
        
-    background-image: url('images/background.png');
+    background-image: url('images/bg4.jpg');
+    
     }
     .header-text{
-        margin-top:100%;
+        text-align: center;
+        margin-top:50%;
         font-size:16px;
     }
     .header-text h1{
