--- a/style.css
+++ b/style.css
@@ -430,6 +430,12 @@ nav .fa-solid{
     .copyright{
         font-size: 14px;
     }
+    
+}
+#msg{
+    color:#61b752;
+    margin-top: -40px;
+    display: block;
 }
 
 
