--- a/style.css
+++ b/style.css
@@ -71,12 +71,12 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text {
-    margin-top:20%;
+    margin-top:10%;
     font-size: 30px;
 }
 .header-text h2{
     font-size: 60px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .header-text h2 span{
     
@@ -381,12 +381,23 @@ nav .fa-solid{
     }
     .header-text{
         text-align: center;
-        margin-top:50%;
+        margin-top:40%;
         font-size:16px;
+    }
+    .header-text p{
+        text-align: center;
+        margin-top:40%;
+        font-size:12px;
     }
     .header-text h2{
         margin-top: 10%;
         font-size:25px;
+        opacity: 1  
+    }
+    .header-text h3{
+        opacity: 0.8;
+        margin-top: -1%;
+    
     }
     
     nav .fa-solid{
